--- a/parity_present_20181127.html
+++ b/parity_present_20181127.html
@@ -50,7 +50,7 @@ background-size: cover
 # Guiding Principles
 
 ???
-### Notes
+#### Notes
 
 ---
 class: right, middle 
@@ -61,7 +61,7 @@ background-size: 50% 100%
 ### Person-Centered
 
 ???
-### Notes:
+#### Notes:
 
 The framework developed must support a person-centered approach to service planning by making concrete choices in its design, which go beyond merely paying lip-service to person-centered planning.  These design decisions include the following:
 - *Not* automating services or amounts
@@ -81,11 +81,15 @@ background-size: 50% 100%
 #### (Consistent, comprehensive)
 
 ???
-### Notes:
+#### Notes:
 
 - In order for ease of implementation and explanation, there should be a consistent conceptual framework which applies across populations.
 - This does not mean that there is not complxity built into the 'back-end', but that the resulting model should be simple to explain and use (*cf. iPhone setup*)
 - The model should include a method to monitor the use of all services across all populations, though this method may be different for different services (*e.g. intake and assessment, where a person has not yet had a determination of need*)
+
+#### View analyis
+
+- Show service grid format
 
 ---
 class: right, middle 
@@ -96,7 +100,7 @@ background-size: 50% 100%
 ### Lines, Not Walls
 
 ???
-### Notes:
+#### Notes:
 
 – We are recommending service thresholds based on assessed need.  
 - Nothing within the thresholds are magic, they have to fit within a process
@@ -106,6 +110,22 @@ background-size: 50% 100%
 - Having ranges or thresholds can never presume that the number of units recommended is either: (a) an absolute exclusion, or (b) a benefit that one is entitled to. *Example*:  If a doctor tells you that it is typical for people to have a 3-day stay following a C-section, this does not mean that (a) you may not stay longer if needed, or (b) if you are ready to leave after 1 day, you can choose to stay for the other two as well.
 - Any system that draws boundaries/thresholds is bound to draw them in a way which does not account for an individual's situation.  Thus, there needs to be a process (*and not an onerous, painful process*) so people can redraw the boundary (i.e. exception process)
 - Differences between levels have to be dotted lines and not walls.
+
+#### Relevant MDHHS Guidance:
+
+"…this approach will not establish or serve as the authorization for the supports and services of an individual and will be used to inform the person-centered planning process which is driven by the individual."
+*Wieferich, J. (2018, October 1). Parity (Letter to PIHP and CMHSP Executive Directors).*
+
+Do not use:
+- "As an arbitrary methodology for determining the amount, scope, and duration… outside of a person-centered planning process."
+- "As a means for achieving budget reductions."
+- "As a process which supplants use of medical necessity criteria..."
+
+*Renwick, T. (2015, October 22). Inappropriate Use of Assessments and Screening Tools (Letter to PIHP Executive Directors).*
+
+#### View analyses
+
+- Show examples of 'levels' and then describe some examples where the lines are pretty 'blurry' between a person assessed at 'level 2 and a level 3'.
 
 ---
 class: inverse, right, middle 
@@ -132,14 +152,20 @@ background-size: 50% 100%
 ### Common Goods
 
 ???
-### Notes:
+#### Notes:
 
 - The model is based on needs, and modified based on medical necessity.
 - That said, there is recognition that resources are finite, and must be shared equitably among those accessing them.
 - If needs exceed resources, then what is the most equitable means of distributing resources?
 - The initial development of this model has been based on the assumption that, because (a) it is based on previous service use and (b) these previous services were provided based on medical necessity, and (c) the region did not previously overrun budgets, and (d) the recommended thresholds are more circumscribed than previous LOC versions, then (e) it is likely that the model will not 
-- While we are trying to achieve regional consistency (potentially statewide consistency) - there is tension due to the contract requirements to both have to meet individuals needs and ensure you have adequate resources to meet everyone's need (need to find the Medicaid language for this point)
+- While we are trying to achieve regional consistency (potentially statewide consistency) - there is tension due to the contract requirements to both have to meet individuals needs and ensure you have adequate resources to meet everyone's need.
 - The lines we draw can overrun budgets or underrun budgets....acknowledging the fiscal realities of this tension is critical
+
+#### Relevant MDHHS Guidance:
+
+"Decisions regarding the authorization of a B(3) service (including the amount, scope and duration) must take into account the PIHP’s documented capacity to reasonably and equitably serve other Medicaid beneficiaries who also have needs for these services. The B(3) supports and services are not intended to meet all the individual’s needs and preferences, as some needs may be better met by community and other natural supports."
+
+*MDHHS Medicaid Provider Manual Section 17.2*
 
 ---
 class: left, bottom 
@@ -163,7 +189,13 @@ background-size: 50% 100%
 ???
 ### Notes:
 - The phrase 'Level of Care' is used in conversations to mean various things: from 'level of need', to 'level of service needed', to 'level of service authorized'
-- We started by defining our terms, clarifying what we meant by:
+- There is also the risk of using jargon as shorthand, such as to start referring to people by their LOC.  (“They’re a level 2 person”).  We are talking about people with similar needs as assessed by a standardized tool, and the services that have historically been received by people who have similar scores.
+
+We started by defining our terms, clarifying what we meant by:
+
+- *Level of Need*: The numeric Level of Care (1, 2, 3, etc.) identified by a need identification tool. Some tools (e.g. LOCUS) incorporate a clinician's endorsement or revision of the level of care into the recommended LOC, while other tools (e.g. CAFAS/PECFAS) have a recommended LOC assigned based on where the aggregate score falls within an established range of groups.
+- *Authorized Level of Care*: The types of HCPCS codes and associated ranges of units which are authorized for an individual based on the prescribed LOC. These are often recommended based on existing CMHSP-specific 'service grids' and available only within a given organization's electronic medical record (EMR).
+- *LOC Provided*: The types of HCPCS codes and number of units that an individual actually receives, as indicated by encounter data. For instance, there are cases where individuals with higher LOCUS scores are served successfully in community settings based on other clinical considerations.
 
 ---
 class: inverse, right, middle 
@@ -175,6 +207,7 @@ background-size: 50% 100%
 
 .pull-right[
 - Policy-based scoping
+- Relevant datasets
 - Needs-based episodes
 - Service groupings
 - Maximum use
@@ -185,16 +218,37 @@ background-size: 50% 100%
 ### Notes:
 Our assumption is that previous use of services was usually appropriate and based on the need indicated by the assessment.
 - *Policy-based scoping*: Filtering/defining service scope based on policy considerations
-- *Needs-based episodes*: Make inter-assessment episodes of service.  Group by level of need (e.g. in LOCUS, this was the clinician-adjusted LOC score)
+- *Relevant datasets*: Datasets included assessment data and &gt;=2 years of assessment data.  The value of using this data is difficult to overstate, since the levels or outputs from the standardized tools used in Michigan do not map perfectly to the community-based services in the Michigan specialty services benefit, and how some translation from the “level of care” determined by the LOCUS, for example, needs to be mapped to the actual services and supports offered in a local community.
+- *Needs-based episodes*: Make inter-assessment episodes of service.  Group by level of need (e.g. in LOCUS, this was the clinician-adjusted LOC score).  Annualized service units to normalize variable episode length.
 - *Service groupings*: Group services by type
 - *Maximum use*: Find maximum per-person values for each HCPCS code
-- *Excluding outliers*: Remove upper-end outliers. Select resulting value as the recommended upper threshold
+- *Excluding outliers*: Remove upper-end outliers. Inter Quartile Range (IQR) methodology was used to identify service outliers.  IQR finds the range of the middle 50% of the data (the difference between the first quartile and third quartile) and multiplies that value by 1.5. The output of that calculation is then added to value of the third quartile, and anything falling above that threshold is deemed an outlier. Select resulting value as the recommended upper threshold.
 
 Types of Service
 - Rationale: Simplifying options increases participation ([Iyengar, 2010](https://www0.gsb.columbia.edu/mygsb/faculty/research/pubfiles/4519/simplicitySeeking.pdf))
 - High and low utilization of one service should not be looked at only in isolation, often the entire package of service utilization will provide a more comprehensive view.
 - Example: Instead of having a lower threshold for both T1016 and T1017, combine both of these into a 'Care Coordination' group which has a higher threshold to allow fluidity in moving between services as necessary.
+- We developed service groupings based on: *Services with Common Focus or Objective*, and *Services with Common Unit Type*
 - Allowing for a choice of multiple relevant services while controlling for use of multiple similar services
+
+---
+class: right, middle 
+background-image: url("images/journey.jpg")
+background-position: left
+background-size: 50% 100%
+
+### Exploration
+
+#### Exploratory analyses used:
+
+.pull-right[
+- Hierarchical clustering
+- ANOVA
+- Association rule mining
+]
+
+???
+### Notes:
 
 ---
 class: inverse, right, middle 
@@ -207,7 +261,7 @@ background-size: 50% 100%
 #### (a.k.a. Try, try again)
 
 ???
-### Notes:
+#### Notes:
 - Developed output to demonstrate the real-world impact that setting certain parameters would have on existing processes.
 - Multiple UM and clinical reviews of output to ensure face validity; this involved retrospective review of individual cases which were flagged using each iteration of the logic
 
@@ -220,6 +274,9 @@ background-size: 50% 100%
 
 ???
 ### Notes:
+- Develop guidance for clinical rationale of authorization exceptions.
+- Update CAFAS/PECFAS (SED) Service Utilization Guidelines, then ASAM and SIS.
+- Define process for refining accuracy of recommendations based on use and overrides.
 
 ---
 class: left, top
